# audex

./: .gitignore  AGENTS.md  CLAUDE.md  IMPLEMENTATION.md  LICENSE.md  README.md  mise.toml  pyproject.toml
.claude/agents/: python-pro.md  rust-engineer.md  sql-pro.md
src/audex/: covers.py  database.py  export.py  main.py  models.py  paths.py  repository.py  scanner.py  tags.py  windows.py
src/audex/repository/: __init__.py  albums.py  artists.py  cleanup.py  common.py  covers.py  file_states.py  genres.py  stats.py  tracks.py
src/audex/scanner/: __init__.py  common.py  first_index.py  refresh.py  walk.py
src/audex/tags/: __init__.py  helpers.py  mutagen.py  pytaglib.py
src/audex/tags/mutagen/: __init__.py  dispatch.py  id3.py  m4a.py  vorbis.py
stubs/: filetype.pyi  taglib.pyi
stubs/mutagen/: __init__.pyi  aac.pyi  flac.pyi  mp3.pyi  mp4.pyi  oggopus.pyi  oggvorbis.pyi  wave.pyi
stubs/mutagen/id3/: __init__.pyi
tests/: audio_fixtures.py  conftest.py  test_database.py  test_export.py  test_features.py  test_main.py  test_main_cli.py  test_paths.py  test_repository_edge_cases.py  test_scanner.py  test_tags_helpers.py  test_tags_mutagen_readers.py  test_tags_pytaglib.py  test_tags_readers.py  test_windows.py
